--- a/JS/Squar game/index.html
+++ b/JS/Squar game/index.html
@@ -7,7 +7,7 @@
       type="text/css">
     
     </head>
-<body onload="first(); init();">
+<body onload="init()">
 <div class="master">
 <div  class="top">Punkty</div>
 <div  class="top">Użytkownik</div>
