--- a/JS/Arkanoid/index.html
+++ b/JS/Arkanoid/index.html
@@ -1,9 +1,17 @@
 <html>
     <head>
         <script src="game.js"></script>
+        <link rel="stylesheet"
+      href="sheet.css"
+      media="screen"
+      type="text/css">
     </head>
     <body onload="init()">
-        <canvas id="canvas" width=1240px height=720px></canvas>
+        <div id="scene">
+            <div id="blocksContainer"></div>
+            <div id="ball"></div>
+            <div id="bat"></div>
+        </div>
         
     </body>
 </html>
