--- a/JS/Minesweeper/tmp.html
+++ b/JS/Minesweeper/tmp.html
@@ -1,27 +1,15 @@
 <html>
     <head>
-        <title>Tmp</title>
-        <script src="game.js"></script>
-        <link rel="stylesheet"
-          href="sheet.css"
-          media="screen"
-          type="text/css">
+
     </head>
     <body>
 
-        <button onClick="start()" >START</button>
-        <div id="game"></div>
+        <script>
+                console.log(Math.floor(Math.random()*100%50));
 
 
+        </script>
 
-</div>
-<script>
-    function start(){
-        for(i=0;i<10;i++){
-            document.getElementById("game").innerHTML += '<H1>Hello</H1><br>';
-        }
-    }
 
-</script>
     </body>
 </html>
